kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: standard
  annotations:
    cert-manager.io/cluster-issuer: exam-kube-clusterissuer
spec:
  ingressClassName: traefik
  tls:
    - secretName: secrettls
      hosts:
        - kube-exam-kustomize.com
        - kube-pgadmin-kustomize.com
  rules:
    - host: kube-exam-kustomize.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-clusterip
                port:
                  number: 80
    - host: kube-pgadmin-kustomize.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-clusterip
                port:
                  number: 80
